--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -4,5 +4,13 @@
 @import "./icon.less";
 
 body {
-    background-color: orange;
+    background-color: #f5f7f9;
+}
+
+.page-nav-bar {
+    background-color: #3296fa !important;
+
+    .van-nav-bar__title {
+        color: white;
+    }
 }
